# tw-monitor

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  LICENSE  Makefile  compile_flags.txt  link_flash.ld  link_sram.ld  readme.md
cmake_toolchains/: arm_cortex_m4.cmake
demos/: CMakeLists.txt  demo_support.c  demo_support.h  fake_memory.c  fakes.c  gethexword.c  menu.c  puthexnumber.c  symbol_rename_map  test.c
docs/: exceptions.md  pinconfig.md  syscalls.md
monitor/: CMakeLists.txt  arm.c  arm.h  assert.c  assert.h  char.h  clobber_sram.h  clobber_sram.s  hardware.h  hardware.s  io.c  io.h  memory.c  memory.h  menu.c  menu.h  monitor.c  scb.c  scb.h  startup.h  startup.s  stm32f411xce_timer.c  stm32f411xce_timer.h  string.c  string.h  syscall.c  syscall.h  terminal.c  terminal.h  thumb_asm.c  thumb_asm.h  transfer.c  transfer.h  util.c  util.h  vector.c  vector.h  vector.s  vt.c  vt.h
monitor/arm/: arm.c  debug.c  debug.h  nvic.c  nvic.h  runtime-abi.c  scb.c
monitor/autogen_encodings/: t32_encoding.c  t32_encoding.h
monitor/hardware/: board.h  hardware.h  hardware.s  peripheral.h  stm32f411xce_timer.c
monitor/hardware/stm32f411xce/: stm32f411xce_board.c  stm32f411xce_gpio.c  stm32f411xce_gpio.h  stm32f411xce_peripherals.c  stm32f411xce_peripherals.h  stm32f411xce_rcc.c  stm32f411xce_rcc.h  stm32f411xce_timer.c  stm32f411xce_timer.h  stm32f411xce_usart.c  stm32f411xce_usart.h
monitor/monitor_cmds/: monitor_assemble.c  monitor_assemble.h  monitor_call.c  monitor_dev.c  monitor_dev.h  monitor_disassemble.c  monitor_disassemble.h  monitor_enter.c  monitor_memory.c  monitor_memory.h
monitor_src/: CMakeLists.txt  arm.c  arm.h  assert.c  assert.h  char.c  char.h  hardware.h  hardware.s  io.c  io.h  menu.c  menu.h  monitor.c  scb.c  scb.h  startup.h  startup.s  string.c  string.h  thumb_asm.c  thumb_asm.h  util.h  vector.s  vt.c  vt.h
monitor_src/autogen_encodings/: do_not_edit  t32_encoding.c  t32_encoding.h
monitor_src/monitor_cmds/: monitor_assemble.c  monitor_call.c  monitor_call.h  monitor_disassemble.c  monitor_disassemble.h  monitor_enter.c  monitor_enter.h  monitor_memdump.c  monitor_memdump.h
scripts/: build.sh  debug.sh  flash.sh  gen_size_piechart.py  quick_build_and_flash.sh  quick_openocd.sh  size.sh
tests/: CMakeLists.txt  char_test.cpp  string_test.cpp  thumb_test.cpp
tools/: CMakeLists.txt  binsend.c
